@@ -1,5 +1,13 @@
 2008-06-24  Martyn Russell  <martyn@imendio.com>
 
+	* src/tracker-indexer/tracker-index.[ch]:
+	* src/tracker-indexer/tracker-indexer.c: Added a timer and a count
+	so we know when we are finished how long it took and how many
+	items were indexed. Also, don't flush after every item, flush
+	every 10 seconds or so.
+
+2008-06-24  Martyn Russell  <martyn@imendio.com>
+
 	* src/trackerd/tracker-crawler.c:
 	* src/trackerd/tracker-monitor.[ch]: Now we detect the backend
 	used for monitoring and set the limits accordingly. We also now
